force-app/main/default/objects/OrderType__c/OrderType__c.object-meta.xml
<CustomObject>
    <description>Tipos de ordem disponíveis</description>
    <label>Tipo de Ordem</label>
    <nameField>
        <label>Tipo de Ordem</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos de Ordem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>