force-app/main/default/objects/OrderType__c/fields/AllowsObservationBln__c.field-meta.xml
<CustomField>
    <fullName>AllowsObservationBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permite observação</label>
    <type>Checkbox</type>
</CustomField>