force-app/main/default/objects/OrderType__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cotação</fullName>
            </value>
            <value>
                <fullName>Venda</fullName>
            </value>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Pedido</fullName>
                <isActive>false</isActive>
                <label>Pedido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>