force-app/main/default/objects/OrderType__c/fields/CustomIdTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIdTxt__c</fullName>
    <externalId>true</externalId>
    <label>Id Customizado</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>