force-app/main/default/objects/OrderType__c/fields/NextOrderType__c.field-meta.xml
<CustomField>
    <fullName>NextOrderType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Ordem de Destino</label>
    <referenceTo>OrderType__c</referenceTo>
    <relationshipLabel>Tipos de Ordem de Cotação</relationshipLabel>
    <relationshipName>PreviousOrderTypes</relationshipName>
    <type>Lookup</type>
</CustomField>