force-app/main/default/objects/OrderType__c/fields/OrderIrrigationBln__c.field-meta.xml
<CustomField>
    <fullName>OrderIrrigationBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordem irrigação</label>
    <type>Checkbox</type>
</CustomField>