force-app/main/default/objects/OrderType__c/fields/QuoteOrderTypeCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>QuoteOrderTypeCodeTxt__c</fullName>
    <label>Código do Tipo de Cotação</label>
    <length>18</length>
    <type>Text</type>
</CustomField>