force-app/main/default/objects/OrderType__c/fields/ReportPaymentTermsBln__c.field-meta.xml
<CustomField>
    <fullName>ReportPaymentTermsBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informa condição de pagamento</label>
    <type>Checkbox</type>
</CustomField>