force-app/main/default/objects/OrderType__c/fields/SalesOrderTypeCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderTypeCodeTxt__c</fullName>
    <label>Código do Tipo de Venda</label>
    <length>18</length>
    <type>Text</type>
</CustomField>