force-app/main/default/objects/OrderType__c/fields/ShippingSplitBln__c.field-meta.xml
<CustomField>
    <fullName>ShippingSplitBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não Quebra remessa por % e Kg</label>
    <type>Checkbox</type>
</CustomField>