force-app/main/default/objects/OrderType__c/validationRules/NextOrderOnlyQuotation.validationRule-meta.xml
<ValidationRule>
    <fullName>NextOrderOnlyQuotation</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Category__c, &apos;Cotação&apos;) &amp;&amp; NextOrderType__c != NULL</errorConditionFormula>
    <errorMessage>Somente Tipos de Ordem de Cotação podem ter Tipo de Ordem de Destino</errorMessage>
</ValidationRule>