force-app/main/default/objects/OrderType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>QuoteOrderTypeCodeTxt__c</columns>
    <columns>SalesOrderTypeCodeTxt__c</columns>
    <columns>CustomIdTxt__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ReportPaymentTermsBln__c</columns>
    <columns>OrderIrrigationBln__c</columns>
    <columns>AllowsObservationBln__c</columns>
    <columns>ShippingSplitBln__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>